[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "common-lib"
version = "0.1.0"
description = "My shared library"
readme = "README.md"
requires-python = "~=3.8"
dependencies = [
"numpy",
"pandas",
"sqlalchemy",
"oracledb",
"python-dotenv",
"pytest",
"pydantic",
"pydantic-settings"
]
# ^ IMPORTANT: List dependencies here so the Main Project knows what to grab!