[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "common-lib"
version = "0.1.0"
description = "My shared library"
readme = "README.md"
dependencies = [
"pytest",
"numpy",
"pandas",
"sqlalchemy",
"oracledb",
"python-dotenv",
"pydantic",
"pydantic-settings",
"requests",
"pyyaml",
"ib_insync",
"pandas_market_calendars>=5.3.0",
"exchange_calendars>=4.13"]

[tool.setuptools]
packages = ["common_lib"]

# ^ IMPORTANT: List dependencies here so the Main Project knows what to grab!